# blink

./: .buckconfig  .buckconfig.local  .editorconfig  .env  .env.ci  .envrc  .envrc.selfhosted  .eslintrc.json  .gitignore  .prettierignore  .tool-versions  ARCHITECTURE.md  BUCK  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEV.md  Dockerfile  Dockerfile-debug  Dockerfile-init  Dockerfile-migrate  Dockerfile-websocket  INSTALLATION.md  Makefile  README.md  TODO.txt  TUTORIAL.md  architecture.iuml  bun.lockb  codegen.yml  config.yaml  default.yaml  deletePods.sh  docker-compose.override.yml  docker-compose.selfhosted.yml  docker-compose.yml  example.json  exportCloudDevnet.sh  exportDeploymentVariables.sh  exportLocal.sh  (+32 more)
core/api-keys/: .env  BUCK  Cargo.toml  Dockerfile  api-keys.yml  api_keys.yml
core/api-keys/.sqlx/: query-0d0b4ceafcf6b501e20dea7609eada782cdebb69765af12d9ef474166d336047.json  query-199062a005df2f2ab23834721f4823904347ad20dc726e79c8fcaacc6a351008.json  query-1a67c8ef64431678f3e1c3cf09b69dce71929ff3e81baf2ba1bed52b6455f8c8.json  query-1c7186cca257fdb04659d869bc6437be33af60539d3e97c74e06e1d956197d61.json  query-2995adf845cf32d2161d9f6b8ab751486a49fe055c654a52832756637fddfdbf.json  query-3c30f2b5fe51722007efd915df973cd185a618903f53df32e5f9381420a4ef45.json  query-4e3129274ff721a1ee88f2ed169122456b1025b26b1d3ee5fcc4b51b16f59c4f.json  query-5057154185b03f6ae8e66a1dab81a94dc74d493856497ed2e4f6cd140d51eab8.json  query-55b7329b0b77d904042d36e5e6039043cc02fa498377de03561943c4e4d433de.json  query-5ef27d047a37d388491505f9aed978df81900c98888852a594e80732673775b7.json  query-6ed03c625536a19f2fa96fe5652c56140df4fd4370319c229ed52e8f07868f7e.json  query-716551508de50efd1c73614d005e3d0bf2d2de36aabf7aa568ab2d845b8b1b0e.json  query-741722928f478e3815cf8316f8a21e5e615ad469ceb49443ca6184b28fa8d6be.json  query-750886aae5b96df76c66a4eec3f074c52bc56b12058bd3000c5b850579049b21.json  query-799aef2d29106de6822e1f66ee9f7a71d3c844edd6aef491af4621cf73e11234.json  query-89243f68fc159de3fd43fef1abe161d5400ecc0392adeda32f135bfbe3272057.json  query-89a4ce6e68b5a8ee259effe93c1cc4975977cf0220c7fad78e53c8ea6c08afce.json  query-89cabab085f6e39a7d8330567b63348cf5cff33f5bb7fcffe1ca64b953b1f19e.json  query-99bc6db0b354e8a7ef70fe64d2bd7dd5da9d3d4f6ffa47296e8678fa902cf5e4.json  query-b52c808ef2afc69dcd45ddd6889b5a7ab0b025f6103ce6f0aa95fb12d950d005.json  query-d0f9efb8a6ab2c7b36cee50f664b0dec28654d37c9812ddd7a6245cf26cf64ec.json  query-d680edf107c2bffe220f880b915bacf55a9418a2ca8bb58d08a4d60062651e38.json  query-dd4b4d230f88e9bdd2829a6a79f5c3e0d47b8795823a8676a7588e4ed9d03108.json  query-de6ccead87f1624a72b18a0c7f715f21c1d3caea71cf9d86ddee3180d3673995.json  query-ef4657437259176d64ff5abc3fa88c6d384c88f04371d0cae47d68599bee707a.json  query-f24b1db7d39e22c52fdde28beb1936f27d49ab435330d44cc4bdfb601e1e1df5.json  query-f30599b0dc2363e69649142ae3e0f8768cdd94f2b04334b9b5b548b8cb113a33.json  query-f53f91f541e68cc541117f51440989b17bde77e7bfef55430bbe2ba75b1dfcbd.json  query-fa550a28f90f8cdbacf62f56e642ee52d743b27cebe180e712ea808cef3798da.json
core/api-keys/migrations/: 20231103084227_api_keys_setup.sql  20231115113501_add-read-only-to-identity-api-keys.sql  20231205080519_optional_expires_at.sql  20231215145636_add_scopes_column.sql  20240112183422_add_hashed_key_to_identity_api_keys.sql
core/api-keys/schema/: schema.gql
core/api-keys/src/: entity.rs  lib.rs  main.rs  scope.rs
core/api-keys/subgraph/: schema.graphql
core/notifications/: .env  BUCK  Cargo.toml  Dockerfile  build.rs  notifications.yml  transifex.yml
core/notifications/.sqlx/: query-06b75ba358f8d3f2450dc6f5481ca73685a3b2c1b428c2883a4592d2a66d23b4.json  query-0c1b2ffe0cbc99d2b28a10791589f8cdc93ecf748f8550948119d1f2da5b4b01.json  query-0d5f56e2f99fb2d8e60e63d1bc16342b53b6aff5793ea99caac3c7cb09139762.json  query-154a357ca668041c48f5f379e4cb668875fdc6e01ad5878d06b5a7bb8d452f20.json  query-1619814c8c207ce8ec66784b129f76a8d2701e6123a8564939c524bc34a50db0.json  query-1f1b7039f03d2b42a88d13ee0394aac08c81a41e828eaa94a29e277177822fc6.json  query-226ebb1c711fd0af3205d22b7896dc95cb6efc3d5ca8d1ee070422977c3d5687.json  query-2685e205ae2a000496b900140d800fbf2176355e2b905541b0b7fcdded49b9ff.json  query-2c4244e6f448e2e4d07c758ca53ee776b63e1bafd93f579334e0d7ed93f16383.json  query-38788b6bfb3d437147ea78bcada68610b5278cb86bd649474d4eb663e98f4497.json  query-3c1e2950dec99401c9d367af2ae011e7aad2b813d5c271865c9fc668ee4cbf12.json  query-3f1d69c6d34a3476efb7a416fe86983e647bdee0ca1b193ace7d3303d5707fc0.json  query-47ede6d0750bde9e9f595f603ee7baf7ba337db2f1707805e8fa36f04ca0360e.json  query-4c23a51a7cf76826899d88518fdfb824510df61441590f0446a858b945339903.json  query-50ec1dd26467218c153b504d2c88a8b78f1ffa124fdc3dc50b8e5e114b838231.json  query-529104c49014a0c003388fb84a45073a1b9178a3da720708b860c2c3a626bd8b.json  query-533ec09be1426e2330214ddb09a74e059574296dc8e7c5e6492e0d60c739935d.json  query-67244c394ea81b586990cc33a4197dd9ecb88f78c598deca5ec8696602a1f95a.json  query-6d3adba585840653c0cc1cfc5eb08275e2011bbb67aeb80a5ef104dc5abe9616.json  query-6f4559f529a6e2aa161d77246c54efcd54103ade3ef23cb60ca7ce719cb1ab36.json  query-6f4a7853d8eb1cbb0755273d02cdfacab94becb12aee0f22f11efeb9f763a65e.json  query-7a016ffc74c7fc0b504297fa3df65a082169f32abe0e158d0414938abfd419f7.json  query-7f658f6746ea4f803591356c3762f9a04ac6f7200686dab96f45c6a47aecb4a3.json  query-80838ccf6602a8efe13fdd66989d14b7445800f2c5c181c26d3f1d59336276d2.json  query-80f1dfe0b2ddd4f5777aee2323523f66a10db11dce0ac7f9e4aef8f33a7017eb.json  query-830a0eee844dbee33a8e21dec95468f49fcb74ca2065ea06f75f7b7f995ea9dd.json  query-8c0d5ca13520b5f0c8652f135dcdedf9f7564b8574efa1c9ec2b5b9b35c5c782.json  query-94f56f9bf9625b0109f038f4157d3f3a3ef55c10681f8d4e0606e4c24c8259f4.json  query-9ceeede103be384587349947a79fa47ff9756f7581fb0c06862f22e34da7c5dd.json  query-9e09dfcca900fab9bfda7c9377215017afd7ddeb6ff33f236039127a4ac841e6.json  query-a5834c8d1067a14ff178e68b03dd8310c6aa520772201e34d0abcff5bbbce16c.json  (+17 more)
core/notifications/.tx/: config
lib/job-executor-rs/: BUCK  Cargo.toml
lib/tracing-rs/: BUCK  Cargo.toml
(+5157 files in other folders)
