[profile.release]
debug = true

[workspace]
resolver = "2"
members = [
    "core/api-keys",
    "lib/tracing-rs",
]

[workspace.dependencies]
anyhow = "1.0.75"
async-graphql = { version = "6.0.11", default-features = false, features = ["tracing", "chrono", "playground"] }
async-graphql-axum = "6.0.9"
axum = { version = "0.6.20", features = ["headers", "macros"] }
jsonwebtoken = "9.2.0"
clap = { version = "4.4", features = ["derive", "env"] }
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
reqwest = { version = "0.11.23", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.49"
serde_yaml = "0.9.25"
serde_json = "1.0.107"
chrono = { version = "0.4.28", features = ["clock", "serde"], default-features = false }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
rand = "0.8.5"
serde_with = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.20.0"
opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "reqwest-client"] }
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"]}
opentelemetry-semantic-conventions = "0.12.0"
opentelemetry-http = "0.9.0"
http = "0.2.9"
