[profile.release]
debug = true

[workspace]
resolver = "2"
members = [
    "core/api-keys",
    "core/notifications",
    "lib/tracing-rs",
    "lib/es-entity-rs",
    "lib/job-executor-rs",
]

[workspace.dependencies]
anyhow = "1.0.79"
async-graphql = { version = "6.0.11", default-features = false, features = ["tracing", "chrono", "playground"] }
async-graphql-axum = "6.0.11"
axum = { version = "0.6.20", features = ["headers", "macros"] }
jsonwebtoken = "9.2.0"
clap = { version = "4.5", features = ["derive", "env"] }
derive_builder = "0.13.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.56"
serde_yaml = "0.9.31"
serde_json = "1.0.111"
chrono = { version = "0.4.33", features = ["clock", "serde"], default-features = false }
futures = "0.3.30"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
mongodb = "2.8.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
rand = "0.8.5"
serde_with = "3.6.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.20.0"
opentelemetry-otlp = { version = "0.13.0", features = ["http-proto", "reqwest-client"] }
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"]}
opentelemetry-semantic-conventions = "0.12.0"
opentelemetry-http = "0.9.0"
http = "0.2.11"
tonic = "0.10.2"
tonic-build = { version = "0.10.2", features = ["prost"] }
tonic-health = "0.10.2"
prost = "0.12"
rust-i18n = "3"
google-fcm1 = "5.0.3"
sqlxmq = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls"] }

