[package]
name = "job-executor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { path = "../../lib/tracing-rs" }

derive_builder = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sqlxmq = { workspace = true }
tokio = { workspace = true }
